<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.secuso.privacyfriendlyexample.MainActivity">

        <include layout="@layout/toolbar"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="?attr/actionBarSize"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.MainActivity"
            android:layout_gravity="center_vertical|center_horizontal|center"
            style="@style/AlertDialog.AppCompat"
            android:gravity="center_vertical|center_horizontal|center">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="fill_parent"
                        android:id="@+id/btnSwitch"
                        tools:srcCompact="@drawable/ic_power_off"
                        android:background="@null"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:scaleType="fitCenter"
                        android:layout_marginLeft="@dimen/margin_smallest"
                        android:layout_marginRight="@dimen/margin_smallest"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/switch_margin_top"
                        android:adjustViewBounds="false"
                        android:baselineAlignBottom="true"
                        android:cropToPadding="false"
                        android:layout_height="@dimen/switch_height" />
                    <!--
                        android:elevation="5dp" -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/description"
                        android:id="@+id/tvDescription"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_below="@+id/btnSwitch"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:background="@drawable/gray_border"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_smallest"
                            android:text="@string/pause"
                            android:textStyle="bold"
                            android:id="@+id/cbPause" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_smallest"
                            android:text="@string/description_start_boot"
                            android:textStyle="bold"
                            android:id="@+id/cbOnBoot"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_smallest"
                            android:text="@string/shake_enabled"
                            android:textStyle="bold"
                            android:id="@+id/cbShake"/>

                        <Switch
                            android:id="@+id/switchBlinking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/blink_mode" />

                        <TextView
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:id="@+id/myStepBarViewTitle"
                            android:text="@string/sensitivity_lv"/>

                            <ir.neo.stepbarview.StepBarView
                                android:id="@+id/myStepBarView"
                                android:layout_width="@dimen/min_width_stepbar"
                                android:layout_height="wrap_content"
                                app:sbv_steps_size="45dp"
                                android:layout_marginTop="@dimen/margin_smallest"
                                app:sbv_steps_reached_colors="@android:color/holo_green_dark"
                                app:sbv_steps_line_reached_colors="@android:color/holo_green_dark"
                                app:sbv_steps_line_unreached_colors="#dbcecece"
                                app:sbv_steps_unreached_colors="#dbcecece"
                                app:sbv_steps_text_color="@android:color/white"
                                app:sbv_max_count="2"
                                android:paddingLeft="@dimen/margin_small"
                                android:paddingRight="@dimen/margin_small"
                                android:background="@drawable/gray_border"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
